# cpp_labs

./: key.txt
Week1 task1/: Week1 task1.sln
Week1 task1/Week1 task1/: Week1 task1.vcxproj
Week1 task1/Week1 task1/x64/Debug/: Week1 task1.exe.recipe  Week1 task1.ilk  vc143.idb
Week1 task2/: Week1 task2.sln
Week1 task2/Week1 task2/: Week1 task2.vcxproj  main.cpp
Week1 task3/: Week1 task3.sln
Week1 task3/Week1 task3/: Week1 task3.vcxproj
week-1/: build.sh
week-1/task1/: build.sh
week-1/task1/src/: main.cpp
week-1/task2/src/: main.cpp
week-1/task3/: build.sh
week-1/task3/src/: main.cpp
week-10/task1/: CMakeLists.txt  Makefile.txt
week-10/task1/include/: StackInterface.h
week-10/task1/src/: Stack.cpp  main.cpp
week-10/task1/tests/: StackTests.cpp
week-11/task1/: CMakeLists.txt
week-11/task1/include/: integrator.h
week-11/task1/src/: integrator.cpp  main.cpp
week-11/task2/: CMakeLists.txt  largefile.txt
week-11/task2/include/: entropy_calculator.h
week-11/task2/src/: entropy_calculator.cpp  main.cpp
week-12/task1/: Makefile
week-12/task2/: Makefile
week-14/client/: Makefile
week-14/server/: Makefile
week-15/: run.sh
week-15/server/: CMakeLists.txt  Makefile
week-15/server/include/: server.hpp
week-15/server/src/: main.cpp  server.cpp
week-15/worker/: CMakeLists.txt  Makefile  comp.sh
week-15/worker/include/: password_cracker.hpp
week-15/worker/src/: main.cpp  password_cracker.cpp
week-5/task1.a.i/: text.txt
week-5/task1.a.i/src/: main.cpp.save
week-5/task1.b.i.ii/: text.txt
week-5/task1.b.i.ii/src/: main.cpp
week-5/task1.c.i.ii.iii/: first_text.txt  second_text.txt
week-5/task1.c.i.ii.iii/src/: main.cpp
week-5/task2.a.i.ii/: Makefile
week-5/task2.a.i.ii/include/: Converter.h
week-5/task2.a.i.ii/src/: Converter.cpp  main.cpp
week-5/task3.a.b/src/: main.cpp
week-6/task1.a/: Makefile
week-6/task1.a/include/: perms.hpp
week-6/task1.a/src/: main.cpp  perms.cpp
week-6/task1.b/: Makefile
week-6/task1.b/include/: Max_Profit.hpp
week-6/task1.b/src/: Max_Profit.cpp  main.cpp
week-6/task1.c/: Makefile
week-6/task1.c/include/: max_water_container.hpp
week-6/task1.c/src/: main.cpp  max_water_container.cpp
week-6/task2.a/src/: main.cpp
week-6/task2.c/src/: main.cpp
week-6/task3.a/src/: main.cpp
week-7/task1/: Makefile
week-7/task1/include/: most_frequent_char.hpp
week-7/task1/src/: main.cpp  most_frequent_char.cpp
week-7/task2/: Makefile
week-7/task2/include/: customer.h  order.h  product.h
week-7/task2/src/: createDate.cpp  customer.cpp  main.cpp  order.cpp  product.cpp
week-7/task3/: Makefile
week-7/task3/include/: search.hpp
week-7/task3/src/: main.cpp  search.cpp
week-8/task1/: CMakeLists.txt  Makefile.txt
week-8/task1/src/: fibonacci.cpp  main.cpp
week-9/task1/: CMakeLists.txt
week-9/task1/include/: fibonacci.hpp
week-9/task1/src/: fibonacci.cpp  main.cpp
week-9/task1/tests/: test_fibonacci.cpp
(+21 files in other folders)
